# project_1

./: README.md  Readme.md  pyproject.toml
src/: generators.py  masks.py  processing.py  texts  widget.py
tests/: test_generators.py  test_masks.py  test_processing.py  test_widget.py
